fixed alignment issue (transform overriden by animation transform) for centering keyword text

--- a/wip/styles.less
+++ b/wip/styles.less
@@ -19,11 +19,17 @@ body {
 .keywords p {
     color:rgb(20,20,20);
     position:absolute;
+    left:50%;
     text-align:center;
-    display:inline;
-    animation: scale 3s cubic-bezier(0.4,0,0.6,1) infinite, slideUp 3s cubic-bezier(0.4,0,0.6,1) infinite, disappear 3s infinite;
-    transform:translateZ(0);
+    transform: translateX(-50%);
 }
+
+.keywords div {
+    position:absolute;
+    left:50%;
+    animation: scale 3s cubic-bezier(0.4,0,0.6,1) infinite, slideUp 3s cubic-bezier(0.4,0,0.6,1) infinite, disappear 3s infinite;
+}
+
 @keyframes slideUp {
     from {
         top:100px;
@@ -34,13 +40,13 @@ body {
 }
 @keyframes scale {
     0% {
-        transform:scale(0.35);
+        transform: scale(0.35);
     }
     50% {
-        transform:scale(1);
+        transform: scale(1);
     }
     100% {
-        transform:scale(0.35);
+        transform: scale(0.35);
     }
 }
 @keyframes disappear {
